Updated the resume and tweak it

--- a/src/assets/ats-resume.html
+++ b/src/assets/ats-resume.html
@@ -20,10 +20,6 @@
             text-rendering: optimizeLegibility;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
-            --primary: #333;
-            --highlighter: #145187;
-            --border: #999999;
-            --ten-px: 0.625rem;
         }
     </style>
     <style type="text/css"
@@ -648,7 +644,8 @@
 
         .main-heading .right {
             margin-left: auto;
-            font-weight: 300;
+            font-weight: 400;
+            font-size: 1.2rem;
         }
 
         .keyword {
